Added Projects Text

--- a/css/style.css
+++ b/css/style.css
@@ -166,3 +166,13 @@ img {
 .discord-text {
     font-size: 2vw;
 }
+
+/*-----------------------------------------------------------------*/
+
+.project-title {
+    font-size: 5vw;
+}
+
+.project-text {
+    font-size: 2vw;
+}
