--- a/css/style.css
+++ b/css/style.css
@@ -176,3 +176,14 @@ img {
 .project-text {
     font-size: 2vw;
 }
+
+/*-----------------------------------------------------------------*/
+
+.fadeIn {
+    animation: fadeIn 2s;
+}
+
+@keyframes fadeIn {
+    0% {opacity: 0}
+    100% {opacity: 100}
+}
