--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ img {
 }
 
 .cv-text {
-    font-size: 6vw;
+    font-size: 6.4vw;
 }
 
 /*-----------------------------------------------------------------*/
@@ -155,6 +155,10 @@ img {
 }
 
 .js-text {
+    font-size: 5vw;
+}
+
+.php-text {
     font-size: 5vw;
 }
 
